# Faceu

./: import-summary.txt
app/: build.gradle
app/src/androidTest/java/com/compilesense/liuyi/faceu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/FaceAlignment/: CMakeLists.txt  Facedetect.cpp  LBF.cpp  LBFRegressor.cpp  LBF_api.h  Utils.cpp  facealignment.h
app/src/main/cpp/FaceAlignment/liblinear/: linear.cpp
app/src/main/java/com/compilesense/liuyi/faceu/: DetectionBasedTracker.java  FaceAlignment.java
app/src/main/java/com/compilesense/liuyi/faceu/activity/: CameraActivity.java  SplashActivity.java
app/src/main/jnissss/: Android.mk  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/res/layout/: activity_camera.xml  activity_splash.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/compilesense/liuyi/faceu/: ExampleUnitTest.java
openCVLibrary310/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
